add lemniscate's echips and emult colors

--- a/lovely/core.toml
+++ b/lovely/core.toml
@@ -37,25 +37,18 @@ target = "functions/common_events.lua"
 pattern = "elseif eval_type == 'dollars' then"
 position = "before"
 payload = '''
-elseif eval_type == 'x_chips' and not (SMODS.Mods["Talisman"] or {}).can_load then
-    sound = 'Spectrallib_xchip'
-    amt = amt
-    text = 'X' .. number_format(amt)
-    colour = G.C.CHIPS
-    config.type = 'fade'
-    config.scale = 0.7
-elseif eval_type == 'e_chips' and not (SMODS.Mods["Talisman"] or {}).can_load then
+elseif eval_type == 'e_chips' and not (SMODS.Mods.Talisman or SMODS.Mods.cdataman or {}).can_load then
     sound = 'Spectrallib_echips'
     amt = amt
     text = '^' .. number_format(amt) .. ' ' .. localize('k_chips')
-    colour = G.C.DARK_EDITION
+    colour = Spectrallib.echips
     config.type = 'fade'
     config.scale = 0.7
-elseif eval_type == 'e_mult' and not (SMODS.Mods["Talisman"] or {}).can_load then
+elseif eval_type == 'e_mult' and not (SMODS.Mods.Talisman or SMODS.Mods.cdataman or {}).can_load then
     sound = 'Spectrallib_emult'
     amt = amt
     text = '^' .. number_format(amt) .. ' ' .. localize('k_mult')
-    colour = G.C.DARK_EDITION
+    colour = Spectrallib_emult
     config.type = 'fade'
     config.scale = 0.7
 '''
