--- a/lovely/ccd.toml
+++ b/lovely/ccd.toml
@@ -218,6 +218,8 @@ target = "card.lua"
 pattern = "perma_h_dollars = self.ability and self.ability.perma_h_dollars or 0,"
 position = "after"
 payload = """
+entr_perma_xlog_chips = self.ability and self.ability.entr_perma_xlog_chips or 0,
+entr_perma_h_xlog_chips = self.ability and self.ability.entr_perma_h_xlog_chips or 0,
 entr_perma_plus_asc = self.ability and self.ability.entr_perma_plus_asc or 0,
 entr_perma_h_plus_asc = self.ability and self.ability.entr_perma_h_plus_asc or 0,
 entr_perma_asc = self.ability and self.ability.entr_perma_asc or 0,
@@ -250,6 +252,7 @@ target = "card.lua"
 pattern = "perma_h_dollars = self.ability and self.ability.perma_h_dollars or 0,"
 position = "after"
 payload = """
+entr_perma_xlog_chips = self.ability and self.ability.entr_perma_xlog_chips or 0,
 entr_perma_plus_asc = self.ability and self.ability.entr_perma_plus_asc or 0,
 entr_perma_h_plus_asc = self.ability and self.ability.entr_perma_h_plus_asc or 0,
 entr_perma_asc = self.ability and self.ability.entr_perma_asc or 0,
@@ -265,6 +268,8 @@ target = "card.lua"
 pattern = "bonus_x_chips = self.ability.perma_x_chips ~= 0 and (self.ability.perma_x_chips + 1) or nil,"
 position = "after"
 payload = """
+entr_perma_xlog_chips = self.ability.entr_perma_xlog_chips ~= 0 and self.ability.entr_perma_xlog_chips or nil,
+entr_perma_h_xlog_chips = self.ability.entr_perma_h_xlog_chips ~= 0 and self.ability.entr_perma_h_xlog_chips or nil,
 entr_perma_plus_asc = self.ability.entr_perma_plus_asc ~= 0 and self.ability.entr_perma_plus_asc or nil,
 entr_perma_h_plus_asc = self.ability.entr_perma_h_plus_asc ~= 0 and self.ability.entr_perma_h_plus_asc or nil,
 entr_perma_asc = self.ability.entr_perma_asc ~= 0 and (self.ability.entr_perma_asc + 1) or nil,
@@ -286,6 +291,12 @@ if specific_vars and specific_vars.bonus_repetitions then
 '''
 position = "after"
 payload = '''
+if specific_vars and specific_vars.entr_perma_xlog_chips then
+    localize{ type = "other", key = "entr_perma_xlog_chips", nodes = desc_nodes, vars = {(specific_vars.entr_perma_xlog_chips)}}
+end
+if specific_vars and specific_vars.entr_perma_h_xlog_chips then
+    localize{ type = "other", key = "entr_perma_h_xlog_chips", nodes = desc_nodes, vars = {(specific_vars.entr_perma_h_xlog_chips)}}
+end
 if specific_vars and specific_vars.entr_perma_plus_asc then
     localize{ type = "other", key = "entr_perma_plus_asc", nodes = desc_nodes, vars = {SMODS.signed(specific_vars.entr_perma_plus_asc)}}
 end
@@ -310,6 +321,56 @@ if specific_vars and specific_vars.suit_bonus then
         G.C.SUITS[specific_vars.suit],
         to_big(specific_vars.suit_level) < to_big(2) and G.C.BLACK or G.C.HAND_LEVELS[to_number(math.min(7, specific_vars.suit_level))]
     }}}
+end
+'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = "functions/common_events.lua"
+pattern = """        -- TARGET: main scoring on played cards"""
+position = "before"
+payload = '''
+local xlog_chips = card:get_entr_xlog_chips()
+if xlog_chips ~= 0 then
+    ret.playing_card.xlog_chips = xlog_chips
+end
+local entr_plus_asc = card:get_entr_plus_asc()
+if entr_plus_asc ~= 0 then
+    ret.playing_card.plus_asc = entr_plus_asc
+end
+local entr_asc = card:get_entr_asc()
+if entr_asc ~= 1 and entr_asc > 0 then
+    ret.playing_card.asc = entr_asc
+end
+local entr_exp_asc = card:get_entr_exp_asc()
+if entr_exp_asc ~= 1 then
+    ret.playing_card.exp_asc = entr_exp_asc
+end
+'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = "functions/common_events.lua"
+pattern = """        -- TARGET: main scoring on held cards"""
+position = "before"
+payload = '''
+local xlog_chips = card:get_entr_h_xlog_chips()
+if xlog_chips ~= 0 then
+    ret.playing_card.xlog_chips = xlog_chips
+end
+local entr_plus_asc = card:get_entr_h_plus_asc()
+if entr_plus_asc ~= 0 then
+    ret.playing_card.plus_asc = entr_plus_asc
+end
+local entr_asc = card:get_entr_h_asc()
+if entr_asc ~= 1 and entr_asc > 0 then
+    ret.playing_card.asc = entr_asc
+end
+local entr_exp_asc = card:get_entr_h_exp_asc()
+if entr_exp_asc ~= 1 then
+    ret.playing_card.exp_asc = entr_exp_asc
 end
 '''
 match_indent = true
